assets/css/style.css
/* ... */
.nav-toggle-label {
    position: absolute;
    top: 0;
    left: 0;
    margin-left: 1em;
    height: 100%;
    display: flex;
    align-items: center;

}

/* hamburger button styling */

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background: var(--bg-dark);
    height: 2px;
    width: 2em;
    border-radius: 2px;
    position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;

}

.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}


nav {
    position: absolute;
    text-align: left;
    top: 100%;
    left: 0;
    background: var(--bg-light);
    width: 100%;
    transform: scale(1, 0);
    transform-origin: top;
    transition: transform 400ms ease-in-out;
}

nav ul,
.ft-nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

nav li {
    margin-bottom: 1em;
    margin-left: 1em;
}

.ft-nav li {
    margin: 1em;
}

nav a {
    color: var(--clr-prim-500);
    font-family: var(--ff-prim);
    text-decoration: none;
    font-size: 1rem;
    text-transform: uppercase;
    opacity: 0;
    transition: opacity 150ms ease-in-out;
}

nav a:hover,
.ft-nav a:hover {
    color: var(--clr--sec-700);

}

/* enables hamburger  */

.nav-toggle:checked~nav {
    transform: scale(1, 1);
}

.nav-toggle:checked~nav a {
    opacity: 1;
    transition: opacity 250ms ease-in-out 250ms;
}




/* == 3.2 Home Page Styling == */

/* hero media styling */

.hero {
    background-color: var(--bg-light);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: rgba(32, 44, 57, .65);
    color: var(--clr--light-900);
    margin-bottom: 100px;
    height: 30rem;
    padding: 2.5rem;
    position: relative;
    overflow: hidden;
    min-height: 95vh;
}

/* overriding global style for hero text */
.hero h1 {
    padding: 0.5rem;
    font-size: 4rem;
    text-transform: uppercase;
    color: var(--clr--light-900);
    text-shadow: 3px 3px 2px var(--clr--sec-700);
}

.hero h2 {
    padding: 1rem;
    color: var(--clr--light-900);
    text-align: left;
}

.hero p {
    padding: 2rem;
    text-align: center;
}

.video-bg {
    position: absolute;
    z-index: -1;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    min-width: 100%;
    min-height: 100%;

}

/* main area*/

body {
    background-color: var(--bg-light);
}

/* create a header for main section */
.explore {
    position: relative;
    display: inline-block;
    text-align: center;
    text-transform: uppercase;
    left: 50%;
    transform: translateX(-50%);
    scroll-snap-align: center;
    font-size: 3.5rem;
    color: var(--clr--prim-700);
    text-shadow: 2px 2px 5px rgba(242, 109, 105, 0.5);
}


.main {
    text-align: center;
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    justify-content: center;
    overflow: hidden;


}

.main h1 {
    text-transform: uppercase;
    padding: 1.5rem;
    color: var(--clr--prim-500);;
}

.main p {
    padding: 1.5rem;
    font-size: var(--fs-700);
}

/* make images uniform */
.main img {
    padding: 0;
    width: 100%;
    height: 15rem;
    overflow: auto;
    object-fit: cover;
}

/* allow flex grow, allow flex shrink, set flex basis for all child elements of main  */
.main>* {
    padding: 5rem;
    flex: 1 1 25em;
}

.under_txt {
    min-height: 10rem;
}

/* == 3.3 Biography Page Styling == */

.bio_main {
    padding: .5rem;
    display: grid;
    gap: 1.5rem;
    width: min(95%, 100rem);
    margin-inline: auto;
    grid-auto-columns: 1fr;
}

.art_img {
    padding: 2.5rem;
    justify-content: center;
    overflow: auto;
    object-fit: cover;

}

.art_img_2  {
    padding: 2.5rem;
    justify-content: center;
    overflow: auto;
    object-fit: cover;
}

.bio_block {
    background: rgba(244, 128, 124, 0.25);
    justify-content: center;
    border-radius: 0.5rem;
    box-shadow: .5em .5em 3.5em rgba(32, 44, 57, .25);
}

.bio_block_2 {
    background: rgba(32, 44, 57, .50);
    justify-content: center;
    border-radius: 0.5rem;
    box-shadow: .5em .5em 3.5em rgba(32, 44, 57, .25);
}

.bio_block h2,
p {
    padding: 1.5rem;
    font-size: var(--fs-700);

}

.bio_block p {
    font-weight: var(--fw-500);
    color: var(--clr-prim-700);
    font-weight: var(--fw-500);
}

.bio_block_2 h2 {
    color: var(--clr--light-700);
    padding: 1.5rem;

}

.bio_block_2 p {
    font-weight: var(--fw-500);
    color: var(--clr--light-700);
}

.bio_source p {
    color: var(--clr-prim-700);
    text-align: center;
    font-size: var(--fs-500);
}

.bio_source a:link {
    text-decoration: none;
}


/* gallery page styling */


.gallery {
    padding: 7em 4em;
    text-align: center;
    display: flex;
    flex-wrap: wrap;
    gap: 2em;
    align-items: flex-start;
    justify-content: space-evenly;
}

.gallery h3 {
    font-family: var(--ff-prim);
    font-size: var(--fs-700);
    color: var(--clr--light-700);
}


.gallery img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

#gal_p_link a {
    text-decoration: none;
    color: var(--clr--sec-700);
}

#gal_p_link a:hover {
    text-decoration: none;
    color: var(--clr--prim-500);
}

.gallery_item {
    position: relative;
    margin: 0;
    padding: 0;
    box-shadow: rgba(32, 44, 57, .65) 0px 30px 90px;
}

.gallery_desc {
    padding: 1.5em;
}

.gallery_title {
    font-size: var(--fs-700);
    font-size: 2rem;
    color: var(--clr--light-700);
    margin-bottom: 0;
    font-family: var(--ff-prim);
}
/* ... */

